<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboard"
        android:icon="@drawable/baseline_cabin_24"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/assignments"
        android:icon="@drawable/baseline_assignment_late_24"
        android:title="@string/assignments" />

    <item
        android:id="@+id/reminders"
        android:icon="@drawable/baseline_quickreply_24"
        android:title="@string/reminders" />

    <item
        android:id="@+id/schedule"
        android:icon="@drawable/baseline_schedule_24"
        android:title="@string/schedule" />
    <item
        android:id="@+id/tasks"
        android:icon="@drawable/baseline_task_24"
        android:title="@string/tasks" />


</menu>
